--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400;500;600;700;800&display=swap');
+
+body{
+  font-family: 'Oxanium', cursive;
+}
+
 .App {
   text-align: center;
 }
