--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-
-.root,
-#root,
-#docs-root {
-    --primary-color: #fff;
-    --secondary-color: red;
+*{
+  margin: 0;
+  padding: 0;
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+  max-width: 100vw;
+  overflow-x: hidden;
+  font-family: 'Oxanium';
+}
+::-webkit-scrollbar {
+  display: none;
 }
